feat(api): implement full Car Insurance REST API with policies, claims, and history
- Added InsurancePolicy and Claim models with DB indexes and constraints
- Implemented DRF viewsets and serializers for Cars, Policies, and Claims
- Added /api/cars/{id}/policies for creating insurance policies (with date validation)
- Added /api/cars/{id}/insurance-valid for checking active policy by date
- Added /api/cars/{id}/claims for creating validated claims (amount > 0, description non-empty)
- Added /api/cars/{id}/history for chronological combined view of policies and claims
- Configured Django Admin for Car, Policy, and Claim management with search and filters
- Verified proper 201, 200, 400, and 404 responses and Location headers per spec

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ structlog==24.1.0
 psycopg2-binary==2.9.9
 drf-spectacular==0.27.1
 APScheduler==3.10.4
+djangorestframework-simplejwt==5.3.1
+drf-nested-routers
