--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,10 @@ APScheduler==3.10.4
 djangorestframework-simplejwt==5.3.1
 drf-nested-routers
 apscheduler
+factory_boy==3.3.0
+Faker==25.0.0
+
+# Testing
+pytest
+pytest-django
+pytest-covdocker
